--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ a:hover {
 }
 
 a.btn {
-  border-radius: 4px;
+  border-radius: 8px;
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
@@ -38,7 +38,7 @@ a.btn {
 
 a.btn:hover {
   background-color: #2539a7;
-  transform: scale(1.02);
+  transform: translateY(-2px);
 }
 
 section {
@@ -189,7 +189,6 @@ header nav li {
   display: inline-block;
   margin-top: 40px;
   padding: 20px 46px;
-  box-shadow: #f5f5f5 0 0 5px;
 }
 
 .hero-content-area {
@@ -280,24 +279,23 @@ header nav li {
 }
 .testimonial-image img {
   border-radius: 50%;
-  width: 160px;
+  width: 140px;
   height: auto;
 }
 .testimonials .quote {
-  font-size: 1.375rem;
-  font-weight: 300;
+  font-size: 1rem;
   line-height: 1.5;
   margin: 40px 0 25px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
   .testimonial-card,
   .testimonial-card:nth-of-type(even) {
     flex-direction: column;
     text-align: center;
   }
   .testimonials .quote {
-    font-size: 1.125rem;
+    /* font-size: 1.125rem; */
     margin: 15px 0;
   }
 
