--- a/app/assets/styles/modules/_contact-page.css
+++ b/app/assets/styles/modules/_contact-page.css
@@ -30,7 +30,7 @@
   padding: 20px 20px;
 }
 @media screen and (min-width: 380px) {
-  h1 {
+  contact-h1 {
     font-size: 2.5rem;
     padding: 20px 30px;
   }
