--- a/app/assets/styles/modules/_grid.css
+++ b/app/assets/styles/modules/_grid.css
@@ -15,6 +15,15 @@
       background-position: center;
     }
 
+    &--packages {
+      padding: 20px;
+      text-align: center;
+
+      @mixin atMedium {
+        padding: 50px;
+      }
+    }
+
     &--medium-at-medium {
       @mixin atMedium {
         flex-basis: 50%;
