--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -7,126 +7,10 @@
 @import "modules/_btn";
 @import "modules/_hero";
 @import "modules/_grid";
+@import "modules/_fade-in";
 @import "modules/_feature";
 @import "modules/_testimonial";
 @import "modules/_separator";
 @import "modules/_subscription-form";
-@import "modules/_social-icons";
+@import "modules/_site-footer";
 @import "modules/_contact-page";
-
-.fadein {
-  opacity: 0;
-}
-
-.fadeinleft {
-  opacity: 0;
-  margin-left: -100px;
-  max-width: 100%;
-}
-
-.fadeinright {
-  opacity: 0;
-  margin-right: -100px;
-  max-width: 100%;
-}
-
-/* Footer */
-.footer-company {
-  display: flex;
-  justify-content: space-around;
-  background-color: #607d8b;
-  color: #fff;
-  padding: 20px 40px;
-}
-
-.footer-company h4 {
-  font-size: 1.125rem;
-  margin: 1.5rem 0;
-}
-
-.contact-line {
-  display: flex;
-  flex: row nowrap;
-  justify-content: flex-start;
-  margin-bottom: 12px;
-}
-
-.contact-line-icon {
-  min-width: 32px;
-  margin-right: 18px;
-  align-self: center;
-  text-align: center;
-  opacity: 0.6;
-}
-
-.contact-line-details {
-  align-self: center;
-  text-align: left;
-}
-
-.contact-line-details p {
-  font-size: 0.875rem;
-  opacity: 0.6;
-}
-
-.useful-links {
-  font-size: 1rem;
-  opacity: 0.6;
-}
-
-.useful-links li {
-  padding-bottom: 0.5rem;
-}
-
-@media (max-width: 764px) {
-  .footer-company {
-    flex-direction: column;
-  }
-}
-
-.footer-dev {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 50px;
-  padding: 20px 60px 30px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-}
-
-.credits {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  opacity: 0.75;
-  text-align: center;
-  line-height: 1.5rem;
-}
-
-.credits .credits-course {
-  font-size: 0.875rem;
-  padding-top: 0.5rem;
-  line-height: 1.25rem;
-}
-
-.credits span {
-  font-size: 1rem;
-}
-
-.credits i {
-  font-size: 2rem;
-  opacity: 1;
-  margin: 0 8px;
-}
-
-.btn-portfolio {
-  display: block;
-  margin: 14px 0;
-  padding: 6px 12px;
-  border-radius: 8px;
-  border: 1px solid #fff;
-}
-.btn-portfolio:hover {
-  opacity: 1;
-}
