--- a/app/assets/styles/modules/_contact-page.css
+++ b/app/assets/styles/modules/_contact-page.css
@@ -1,114 +1,86 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
-
-/* General styles */
-
-.contact-body {
+.contact-page {
   background-color: #f5f5f5;
   padding: 10px;
-}
 
-.contact-hr {
-  width: 400px;
-  max-width: 80%;
-  height: 3px;
-  background-color: #3f51b5;
-  border: 0;
-  margin: 10px auto 30px;
-  display: block;
-}
+  &__form-container {
+    max-width: 800px;
+    min-height: calc(100vh - 40px);
+    margin: 10px auto;
+    padding: 10px 20px;
+    background-color: #fff;
+  }
 
-.form-container {
-  max-width: 800px;
-  min-height: calc(100vh - 40px);
-  margin: 10px auto;
-  padding: 10px 20px;
-  background-color: #fff;
-}
-.contact-h1 {
-  text-align: center;
-  font-size: 2rem;
-  padding: 20px 20px;
-}
-@media screen and (min-width: 380px) {
-  contact-h1 {
-    font-size: 2.5rem;
-    padding: 20px 30px;
-  }
-}
+  &__title {
+    text-align: center;
+    font-size: 2rem;
+    padding: 20px 20px;
 
-.form-of-page {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  max-width: 400px;
-  margin: 0 auto;
-}
-span.star {
-  color: #b71c1c;
-}
+    @mixin atSmall {
+      font-size: 2.5rem;
+      padding: 20px 30px;
+    }
+  }
 
-.contact-form {
-  input,
-  textarea {
-    margin-top: 6px;
-    margin-bottom: 18px;
-    padding: 4px 6px;
-  }
-  input {
-    height: 1.5rem;
-  }
-  p {
-    font-size: 0.875rem;
-  }
-  .buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
+  &__form {
     display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: baseline;
-    -ms-flex-align: baseline;
-    align-items: baseline;
+    flex-direction: column;
+    max-width: 400px;
+    margin: 0 auto;
+
+    input,
+    textarea {
+      margin-top: 6px;
+      margin-bottom: 18px;
+      padding: 4px 6px;
+    }
+    input {
+      height: 1.5rem;
+    }
+    p {
+      font-size: 0.875rem;
+    }
   }
-  .nav-link {
+
+  &__navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
+    button {
+      margin: 1.5rem 0;
+      padding: 12px 36px;
+      border-radius: 8px;
+      text-transform: uppercase;
+      text-align: center;
+      background-color: $mainIndigo;
+      transition: all 0.3s linear 0.05s;
+      color: #fff;
+      border: none;
+    }
+
+    button:hover {
+      background-color: $darkerIndigo;
+      transform: translateY(-2px);
+      cursor: pointer;
+    }
+  }
+
+  &__backlink {
     color: inherit;
     text-decoration: none;
-    -webkit-transition: all 0.3s linear 0.05;
-    -o-transition: all 0.3s linear 0.05;
     transition: all 0.3s linear 0.05;
+
+    i {
+      font-size: 0.75rem;
+      transform: translateY(-1.5px);
+    }
+
+    &:hover {
+      color: $mainIndigo;
+    }
   }
-  .nav-link i {
-    font-size: 0.75rem;
-    -webkit-transform: translateY(-1.5px);
-    -ms-transform: translateY(-1.5px);
-    transform: translateY(-1.5px);
-  }
-  .nav-link:hover {
-    color: #3f51b5;
-  }
-  button {
-    margin: 1.5rem 0;
-    padding: 12px 36px;
-    border-radius: 8px;
-    text-transform: uppercase;
-    text-align: center;
-    background-color: #3f51b5;
-    -webkit-transition: all 0.3s linear 0.05s;
-    -o-transition: all 0.3s linear 0.05s;
-    transition: all 0.3s linear 0.05s;
-    color: #fff;
-    border: none;
-  }
-  button:hover {
-    background-color: #2539a7;
-    -webkit-transform: translateY(-2px);
-    -ms-transform: translateY(-2px);
-    transform: translateY(-2px);
-    cursor: pointer;
-  }
+}
+
+span.star {
+  color: #b71c1c;
 }
